--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,8 @@
   </head>
 
   <body>
+    <div class="canvas-wrap"></div>
+
     <input type="text" class="styled-input" placeholder="Type something..." />
 
     <div id="chatSubmit">
