--- a/templates/overlay.html
+++ b/templates/overlay.html
@@ -38,6 +38,7 @@
       href="{{ url_for('static', filename='css/main.css') }}"
     />
   </head>
+  <div class="canvas-wrap"></div>
 
   <body>
     <input
