--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,11 @@
   <head>
     <meta charset="utf-8" />
     <title>Companion-AI</title>
+    <style>
+      .hidden {
+        display: none !important;
+      }
+    </style>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
@@ -16,7 +21,7 @@
   </head>
 
   <body>
-    <div class="canvas-wrap"></div>
+    <div class="canvas-wrap hidden"></div>
 
     <input type="text" class="styled-input" placeholder="Type something..." />
 
