can now drag and drop animation and the actelly apear and only allows fbx files

--- a/public/css/layout/window.css
+++ b/public/css/layout/window.css
@@ -281,6 +281,11 @@
     & input[type="file"] {
       display: none;
     }
+
+    & .highlight {
+      border-color: #4a90e2;
+      background-color: #f0f8ff;
+    }
   }
 }
 
